<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutMe">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/about_me_text"
        android:textSize="@dimen/mediumTextSize"
        android:padding="@dimen/mediumPaddingMargin"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/about_me_text_two"
        android:textSize="@dimen/mediumTextSize"
        android:padding="@dimen/mediumPaddingMargin"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/about_me_text_three"
        android:textSize="@dimen/mediumTextSize"
        android:padding="@dimen/mediumPaddingMargin"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/offer"
        android:textSize="@dimen/mediumTextSize"
        android:padding="@dimen/mediumPaddingMargin"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="match_parent"
        android:text="@string/conclusion"
        android:textSize="@dimen/mediumTextSize"
        android:padding="@dimen/mediumPaddingMargin"
        android:layout_height="wrap_content"/>

</LinearLayout>

</ScrollView>