<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:weightSum="10"
    tools:context=".UserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/mediumPaddingMargin"
        android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/circular_border"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground"/>

    <TextView
        android:layout_width="match_parent"
        android:textSize="@dimen/profileNameTextSize"
        android:text="@string/sampleUserName"
        android:textStyle="bold"
        android:layout_margin="@dimen/smallPaddingMargin"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:textSize="@dimen/smallTextSize"
        android:text="@string/activeSince"
        android:textStyle="bold"
        android:layout_margin="@dimen/smallPaddingMargin"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"/>

    </LinearLayout>

      <LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_margin="@dimen/smallPaddingMargin"
    android:background="@drawable/red_border"
    android:weightSum="10"
    android:gravity="center"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:layout_height="@dimen/userProfileScreenIcon"
        android:padding="@dimen/mediumPaddingMargin"
        android:tint="@android:color/white"
        android:src="@drawable/ic_people_black_24dp"/>


    <TextView
        android:layout_width="0dp"
        android:layout_weight="3"
        android:textSize="@dimen/mediumTextSize"
        android:text="@string/sampleNumber"
        android:textStyle="bold"
        android:layout_margin="@dimen/smallPaddingMargin"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="3"
        android:textSize="@dimen/smallTextSize"
        android:text="@string/followers"
        android:textStyle="bold"
        android:layout_margin="@dimen/smallPaddingMargin"
        android:gravity="left"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"/>





</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="@dimen/smallPaddingMargin"
        android:background="@drawable/red_border"
        android:weightSum="10"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:layout_height="@dimen/userProfileScreenIcon"
            android:padding="@dimen/mediumPaddingMargin"
            android:tint="@android:color/white"
            android:src="@drawable/ic_video_library_black_24dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textSize="@dimen/mediumTextSize"
            android:text="@string/sampleNumber"
            android:textStyle="bold"
            android:layout_margin="@dimen/smallPaddingMargin"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textSize="@dimen/smallTextSize"
            android:text="@string/videos"
            android:textStyle="bold"
            android:layout_margin="@dimen/smallPaddingMargin"
            android:gravity="left"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"/>





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="@dimen/smallPaddingMargin"
        android:background="@drawable/red_border"
        android:weightSum="10"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:layout_height="@dimen/userProfileScreenIcon"
            android:padding="@dimen/mediumPaddingMargin"
            android:tint="@android:color/white"
            android:src="@drawable/ic_remove_red_eye_black_24dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textSize="@dimen/mediumTextSize"
            android:text="2,545"
            android:textStyle="bold"
            android:layout_margin="@dimen/smallPaddingMargin"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textSize="@dimen/smallTextSize"
            android:text="@string/views"
            android:textStyle="bold"
            android:layout_margin="@dimen/smallPaddingMargin"
            android:gravity="left"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"/>





    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/mediumPaddingMargin"
        android:background="@drawable/standard_button_red"
        android:gravity="center"
        android:layout_marginTop="@dimen/mediumPaddingMargin"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:onClick="GoBack"
        android:text="Checkout All Videos"/>


</LinearLayout>